// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Private - Common - ModheaderSection =>  Snapshot ModheaderSection con link 1`] = `
<section
  class="mod-headersection "
>
  <h4
    class="com-title --l"
  >
    <a
      class="com-link"
      href="https://lanacion.com.ar/"
    >
      Titulo Separador
    </a>
  </h4>
  <div
    class="com-line  "
  />
</section>
`;

exports[`Private - Common - ModheaderSection =>  Snapshots ModheaderSection 1`] = `
<section
  class="mod-headersection "
>
  <h4
    class="com-title --l"
  >
    Titulo Separador
  </h4>
  <div
    class="com-line  "
  />
</section>
`;
